--- a/25-05-13/Compare.html
+++ b/25-05-13/Compare.html
@@ -14,10 +14,17 @@
   </div>
   <div class="middle">
     <h2>Compare your heroes!</h2>
-    <div class="box">
-      <p>Hero 1</p>
-      <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
-      <button>Search!</button>
+    <div class="boxes">
+      <div class="box">
+        <p>Hero 1</p>
+        <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
+        <button>Search!</button>
+      </div>
+      <div class="box">
+        <p>Hero 2</p>
+        <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
+        <button>Search!</button>
+      </div>
     </div>
   </div>
   <script src="script.js"></script>
